switched to yarm mappings

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ archives_base_name=modeor
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.134.0+1.21.9
+
+yarn_mappings=1.21.9+build.1
+loom_version=1.11-SNAPSHOT
